Classes/TP9/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Comando
Rule 1     Comando -> ( READ id )
Rule 2     Comando -> ( PRINT Exp )
Rule 3     Comando -> ( SET id Exp )
Rule 4     Comando -> DUMP
Rule 5     Exp -> ( ADD Exp Termo )
Rule 6     Exp -> ( SUB Exp Termo )
Rule 7     Exp -> Termo
Rule 8     Exp -> ( MUL Termo Factor )
Rule 9     Termo -> ( DIV Termo Factor )
Rule 10    Termo -> Factor
Rule 11    Factor -> ( Exp )
Rule 12    Factor -> num
Rule 13    Factor -> id

Terminals, with rules where they appear

(                    : 1 2 3 5 6 8 9 11
)                    : 1 2 3 5 6 8 9 11
ADD                  : 5
DIV                  : 9
DUMP                 : 4
MUL                  : 8
PRINT                : 2
READ                 : 1
SET                  : 3
SUB                  : 6
error                : 
id                   : 1 3 13
num                  : 12

Nonterminals, with rules where they appear

Comando              : 0
Exp                  : 2 3 5 6 11
Factor               : 8 9 10
Termo                : 5 6 7 8 9

Parsing method: LALR

state 0

    (0) S' -> . Comando
    (1) Comando -> . ( READ id )
    (2) Comando -> . ( PRINT Exp )
    (3) Comando -> . ( SET id Exp )
    (4) Comando -> . DUMP

    (               shift and go to state 2
    DUMP            shift and go to state 3

    Comando                        shift and go to state 1

state 1

    (0) S' -> Comando .



state 2

    (1) Comando -> ( . READ id )
    (2) Comando -> ( . PRINT Exp )
    (3) Comando -> ( . SET id Exp )

    READ            shift and go to state 4
    PRINT           shift and go to state 5
    SET             shift and go to state 6


state 3

    (4) Comando -> DUMP .

    $end            reduce using rule 4 (Comando -> DUMP .)


state 4

    (1) Comando -> ( READ . id )

    id              shift and go to state 7


state 5

    (2) Comando -> ( PRINT . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 9
    Termo                          shift and go to state 10
    Factor                         shift and go to state 11

state 6

    (3) Comando -> ( SET . id Exp )

    id              shift and go to state 14


state 7

    (1) Comando -> ( READ id . )

    )               shift and go to state 15


state 8

    (5) Exp -> ( . ADD Exp Termo )
    (6) Exp -> ( . SUB Exp Termo )
    (8) Exp -> ( . MUL Termo Factor )
    (9) Termo -> ( . DIV Termo Factor )
    (11) Factor -> ( . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    ADD             shift and go to state 16
    SUB             shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20
    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 17
    Termo                          shift and go to state 10
    Factor                         shift and go to state 11

state 9

    (2) Comando -> ( PRINT Exp . )

    )               shift and go to state 21


state 10

    (7) Exp -> Termo .

    )               reduce using rule 7 (Exp -> Termo .)
    (               reduce using rule 7 (Exp -> Termo .)
    num             reduce using rule 7 (Exp -> Termo .)
    id              reduce using rule 7 (Exp -> Termo .)


state 11

    (10) Termo -> Factor .

    )               reduce using rule 10 (Termo -> Factor .)
    (               reduce using rule 10 (Termo -> Factor .)
    num             reduce using rule 10 (Termo -> Factor .)
    id              reduce using rule 10 (Termo -> Factor .)


state 12

    (12) Factor -> num .

    )               reduce using rule 12 (Factor -> num .)
    (               reduce using rule 12 (Factor -> num .)
    num             reduce using rule 12 (Factor -> num .)
    id              reduce using rule 12 (Factor -> num .)


state 13

    (13) Factor -> id .

    )               reduce using rule 13 (Factor -> id .)
    (               reduce using rule 13 (Factor -> id .)
    num             reduce using rule 13 (Factor -> id .)
    id              reduce using rule 13 (Factor -> id .)


state 14

    (3) Comando -> ( SET id . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 22
    Termo                          shift and go to state 10
    Factor                         shift and go to state 11

state 15

    (1) Comando -> ( READ id ) .

    $end            reduce using rule 1 (Comando -> ( READ id ) .)


state 16

    (5) Exp -> ( ADD . Exp Termo )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 23
    Termo                          shift and go to state 10
    Factor                         shift and go to state 11

state 17

    (11) Factor -> ( Exp . )

    )               shift and go to state 24


state 18

    (6) Exp -> ( SUB . Exp Termo )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 25
    Termo                          shift and go to state 10
    Factor                         shift and go to state 11

state 19

    (8) Exp -> ( MUL . Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 26
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 27
    Factor                         shift and go to state 11

state 20

    (9) Termo -> ( DIV . Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 26
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 28
    Factor                         shift and go to state 11

state 21

    (2) Comando -> ( PRINT Exp ) .

    $end            reduce using rule 2 (Comando -> ( PRINT Exp ) .)


state 22

    (3) Comando -> ( SET id Exp . )

    )               shift and go to state 29


state 23

    (5) Exp -> ( ADD Exp . Termo )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 26
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 30
    Factor                         shift and go to state 11

state 24

    (11) Factor -> ( Exp ) .

    )               reduce using rule 11 (Factor -> ( Exp ) .)
    (               reduce using rule 11 (Factor -> ( Exp ) .)
    num             reduce using rule 11 (Factor -> ( Exp ) .)
    id              reduce using rule 11 (Factor -> ( Exp ) .)


state 25

    (6) Exp -> ( SUB Exp . Termo )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 26
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 31
    Factor                         shift and go to state 11

state 26

    (9) Termo -> ( . DIV Termo Factor )
    (11) Factor -> ( . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    DIV             shift and go to state 20
    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Termo                          shift and go to state 10
    Factor                         shift and go to state 11
    Exp                            shift and go to state 17

state 27

    (8) Exp -> ( MUL Termo . Factor )
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 32
    num             shift and go to state 12
    id              shift and go to state 13

    Factor                         shift and go to state 33

state 28

    (9) Termo -> ( DIV Termo . Factor )
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 32
    num             shift and go to state 12
    id              shift and go to state 13

    Factor                         shift and go to state 34

state 29

    (3) Comando -> ( SET id Exp ) .

    $end            reduce using rule 3 (Comando -> ( SET id Exp ) .)


state 30

    (5) Exp -> ( ADD Exp Termo . )

    )               shift and go to state 35


state 31

    (6) Exp -> ( SUB Exp Termo . )

    )               shift and go to state 36


state 32

    (11) Factor -> ( . Exp )
    (5) Exp -> . ( ADD Exp Termo )
    (6) Exp -> . ( SUB Exp Termo )
    (7) Exp -> . Termo
    (8) Exp -> . ( MUL Termo Factor )
    (9) Termo -> . ( DIV Termo Factor )
    (10) Termo -> . Factor
    (11) Factor -> . ( Exp )
    (12) Factor -> . num
    (13) Factor -> . id

    (               shift and go to state 8
    num             shift and go to state 12
    id              shift and go to state 13

    Exp                            shift and go to state 17
    Termo                          shift and go to state 10
    Factor                         shift and go to state 11

state 33

    (8) Exp -> ( MUL Termo Factor . )

    )               shift and go to state 37


state 34

    (9) Termo -> ( DIV Termo Factor . )

    )               shift and go to state 38


state 35

    (5) Exp -> ( ADD Exp Termo ) .

    )               reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)
    (               reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)
    num             reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)
    id              reduce using rule 5 (Exp -> ( ADD Exp Termo ) .)


state 36

    (6) Exp -> ( SUB Exp Termo ) .

    )               reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)
    (               reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)
    num             reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)
    id              reduce using rule 6 (Exp -> ( SUB Exp Termo ) .)


state 37

    (8) Exp -> ( MUL Termo Factor ) .

    )               reduce using rule 8 (Exp -> ( MUL Termo Factor ) .)
    (               reduce using rule 8 (Exp -> ( MUL Termo Factor ) .)
    num             reduce using rule 8 (Exp -> ( MUL Termo Factor ) .)
    id              reduce using rule 8 (Exp -> ( MUL Termo Factor ) .)


state 38

    (9) Termo -> ( DIV Termo Factor ) .

    )               reduce using rule 9 (Termo -> ( DIV Termo Factor ) .)
    (               reduce using rule 9 (Termo -> ( DIV Termo Factor ) .)
    num             reduce using rule 9 (Termo -> ( DIV Termo Factor ) .)
    id              reduce using rule 9 (Termo -> ( DIV Termo Factor ) .)

